--- a/UIKit/storyboard/UIKit_Storyboard_Navigation_Tutorial/UIKit_Storyboard_Navigation_Tutorial/Storyboard/Base.lproj/Main.storyboard
+++ b/UIKit/storyboard/UIKit_Storyboard_Navigation_Tutorial/UIKit_Storyboard_Navigation_Tutorial/Storyboard/Base.lproj/Main.storyboard
@@ -53,26 +53,33 @@
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pIS-cZ-Mao">
                                 <rect key="frame" x="20" y="153" width="353" height="60"/>
-                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="aJy-3U-C2n"/>
                                 </constraints>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K3T-ug-jqj">
+                                <rect key="frame" x="20" y="263" width="353" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="pIS-cZ-Mao" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="2TS-jz-16H"/>
+                            <constraint firstItem="K3T-ug-jqj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3dc-ol-Zq9"/>
                             <constraint firstItem="4t7-Uy-zMp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="5WK-uI-eTj"/>
                             <constraint firstItem="4t7-Uy-zMp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E4Z-4a-5Ye"/>
                             <constraint firstItem="fCq-Jd-ZRc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xdk-rQ-ORh"/>
                             <constraint firstItem="pIS-cZ-Mao" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="g0V-ES-J6a"/>
+                            <constraint firstItem="K3T-ug-jqj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="g5f-P2-VLo"/>
                             <constraint firstItem="pIS-cZ-Mao" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hdA-4a-L06"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fCq-Jd-ZRc" secondAttribute="bottom" constant="100" id="r0J-HU-84q"/>
                             <constraint firstItem="4t7-Uy-zMp" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wwp-dK-AuX"/>
+                            <constraint firstItem="K3T-ug-jqj" firstAttribute="top" secondItem="pIS-cZ-Mao" secondAttribute="bottom" constant="50" id="y9C-WA-9dd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="첫번째" id="d5x-mo-7t6"/>
@@ -80,6 +87,7 @@
                         <outlet property="navToDetailVCButton" destination="ynw-yD-ubz" id="vvZ-PL-Uo6"/>
                         <outlet property="navToSecondVCButton" destination="4NJ-xQ-CxR" id="Qu8-SP-pjT"/>
                         <outlet property="textField" destination="pIS-cZ-Mao" id="3ez-w3-cEJ"/>
+                        <outlet property="titleLabel" destination="K3T-ug-jqj" id="ccL-a0-HwG"/>
                         <segue destination="Ict-lZ-EGw" kind="show" identifier="navToDetailVC" id="nvq-J0-Qjk"/>
                         <segue destination="7h2-xM-Gq6" kind="show" identifier="navToSecondVC" destinationCreationSelector="navToSecondVCWithSomeDataWithCoder:sender:segueIdentifier:" id="dLO-h6-aKL"/>
                     </connections>
@@ -130,6 +138,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
