--- a/UIKit/storyboard/UIKit_Storyboard_Navigation_Tutorial/UIKit_Storyboard_Navigation_Tutorial/Storyboard/SecondVC.storyboard
+++ b/UIKit/storyboard/UIKit_Storyboard_Navigation_Tutorial/UIKit_Storyboard_Navigation_Tutorial/Storyboard/SecondVC.storyboard
@@ -68,20 +68,34 @@
                                     <constraint firstAttribute="height" constant="120" id="yw8-Rn-60R"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0W-nM-6uX">
+                                <rect key="frame" x="20" y="718" width="353" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="QCw-f9-ehC"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="프로그램푸시 - 세번째로 이동"/>
+                                <connections>
+                                    <action selector="doThirdPushAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zov-Q3-Nws"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6mp-8O-fR1" firstAttribute="top" secondItem="LML-Mg-Z9t" secondAttribute="bottom" constant="40" id="3Rp-nb-aAj"/>
                             <constraint firstItem="R0c-TC-U0M" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="9dv-Rq-gdF"/>
+                            <constraint firstItem="f0W-nM-6uX" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Acg-nV-OXa"/>
                             <constraint firstItem="R0c-TC-U0M" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="MU3-ZR-dK1"/>
                             <constraint firstItem="s3T-eL-ncs" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="PdP-Sa-QSO"/>
+                            <constraint firstItem="f0W-nM-6uX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Qkq-kN-5Zb"/>
                             <constraint firstItem="6mp-8O-fR1" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="YWa-6r-CcV"/>
                             <constraint firstItem="LML-Mg-Z9t" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="50" id="nCE-tK-r0b"/>
                             <constraint firstItem="R0c-TC-U0M" firstAttribute="top" secondItem="s3T-eL-ncs" secondAttribute="bottom" constant="50" id="pL1-G1-Rce"/>
                             <constraint firstItem="6mp-8O-fR1" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="vOC-uu-iyC"/>
                             <constraint firstItem="LML-Mg-Z9t" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="vXM-HU-4bH"/>
                             <constraint firstItem="s3T-eL-ncs" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="yAk-xY-jhT"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="f0W-nM-6uX" secondAttribute="bottom" constant="50" id="zdu-Dx-ArJ"/>
                         </constraints>
                     </view>
                     <connections>
